mengubah warna tombol menjadi dark

--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
           <textarea class="form-control text-center" id="pesan1" row="3"> kirim pesan untuk saya</textarea>
           </div>
           <br>
-      <button type="submit" class="btn btn-primary">Kirim</button> 
+      <button type="submit" class="btn btn-dark">Kirim</button> 
         </form>
       </div>
     </div>
